<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_pkg</name>
  <version>0.0.0</version>
  <description>A ROS 2 package containing driver nodes for hardware sensors including DHT11, DHT22, Flame, and MQ-2 gas sensors, along with a sensor simulator.</description>
  <maintainer email="antonyjuza@gmail.com">Antony Juza</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>python3-pigpio</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
